--- a/interface-wrapper/build.gradle
+++ b/interface-wrapper/build.gradle
@@ -16,6 +16,10 @@ dependencies {
     compile 'com.github.javaparser:javaparser-symbol-solver-core:3.15.14'
     compile 'com.google.auto:auto-common:0.10'
     compile files(Jvm.current().toolsJar)
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.10.0'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.4'
 }
 
 task sourcesJar(type: Jar) {
