Add support for meta annotations based on wrapper interface

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
 include ':interface-wrapper'
 include ':interface-wrapper-samples:simple-interface-wrapper'
+include ':interface-wrapper-samples:meta-annotation-interface-wrapper'
 
