--- a/interface-wrapper-runtime/build.gradle
+++ b/interface-wrapper-runtime/build.gradle
@@ -1,5 +1,3 @@
-import org.gradle.internal.jvm.Jvm
-
 plugins {
     id 'java-library'
     id 'maven-publish'
@@ -9,8 +7,9 @@ plugins {
 }
 
 group 'ppanda.sharpie'
+
 ext {
-    artifactName = 'interface-wrapper'
+    artifactName = 'interface-wrapper-runtime'
     binTrayUserName = findProperty("bintrayUserName")
     bintrayApiToken = findProperty("bintrayApiToken")
     signingKey = findProperty("signingKey")
@@ -21,17 +20,6 @@ sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
-    annotationProcessor 'com.google.auto.service:auto-service:1.0-rc2'
-    compileOnly 'com.google.auto.service:auto-service:1.0-rc2'
-    api project(':interface-wrapper-runtime')
-    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.15.14'
-    implementation 'com.google.auto:auto-common:0.10'
-    implementation files(Jvm.current().toolsJar)
-
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.10.0'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.4'
-    testCompile 'com.google.testing.compile:compile-testing:0.18'
 }
 
 java {
@@ -45,8 +33,8 @@ publishing {
             from components.java
             artifactId = artifactName
             pom {
-                name = 'Interface Wrapper'
-                description = 'A small library to wrap interfaces with custom needs'
+                name = 'Interface Wrapper Runtime'
+                description = 'Runtime components for Interface Wrapper'
                 licenses {
                     license {
                         name = 'The Apache License, Version 2.0'
@@ -98,7 +86,6 @@ task removeCurrentVersionIfExists {
     }
 }
 publishMavenJavaPublicationToJCenterRepository.dependsOn(removeCurrentVersionIfExists)
-
 
 task removePoisonousMavenMetadataBasedFakeVersion {
     doLast {
