--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ':interface-wrapper'
+include ':interface-wrapper-runtime'
 include ':interface-wrapper-samples:simple-interface-wrapper'
 include ':interface-wrapper-samples:meta-annotation-interface-wrapper'
 
